--- a/src/assets/styles/Denuncia.css
+++ b/src/assets/styles/Denuncia.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  padding-top: 150px ;
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
   color: #333;
@@ -27,23 +28,26 @@ button {
   
 }
 
-/* Sección de denuncia */
 .main-content {
-  padding: 20px;
+  padding-top: 150px; /* Ajuste dinámico igual a la altura del header */
 }
 
+/* Sección de denuncia */
 .denuncia-section {
-  margin-top: 150px; /* Igual a la altura del header */
+  display: grid; 
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: auto auto; 
+  align-items: start; 
+  justify-items: start; 
   background-image: url('../images/Bienvenida-DenunciaBanner.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 40px 20px;
+  padding: 40px;
   border-radius: 8px;
   color: #ffffff;
   margin-bottom: 30px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: center;
   position: relative;
 }
 
@@ -54,8 +58,17 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); /* Oscurece la imagen */
   z-index: 1;
+}
+
+.denuncia-section-content {
+  grid-column: 1 / span 1; 
+  grid-row: 1 / span 2; 
+  position: relative;
+  z-index: 2; 
+  text-align: left; 
+  max-width: 500px; 
 }
 
 .denuncia-title,
@@ -64,18 +77,20 @@ button {
   position: relative;
   z-index: 2;
 }
+
 .denuncia-title {
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   line-height: 1.4;
 }
 
 .denuncia-description {
   font-size: 1.2rem;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   line-height: 1.5;
 }
+
 
 .denuncia-button {
   background-color: #009887;
@@ -147,15 +162,23 @@ button {
   display: block;
   width: 100%;
   height: 30px;
-  background-image: url('../images/pattern.png'); /* Ruta del patrón decorativo */
+  background-image: url('../images/pattern.png');
   background-repeat: repeat-x;
   margin-bottom: 10px;
 }
 
+
 /* Responsivo */
 @media (max-width: 768px) {
-  .info-card {
-    width: 100%;
+  .denuncia-section {
+    grid-template-columns: 1fr; /* Cambia a una sola columna en pantallas pequeñas */
+    grid-template-rows: auto auto auto; /* Se adapta al contenido */
+    padding: 20px;
+  }
+
+  .denuncia-section-content {
+    max-width: 100%; /* Ocupa todo el ancho disponible */
+    text-align: center; /* Centra el texto */
   }
 
   .denuncia-title {
@@ -171,11 +194,7 @@ button {
     padding: 10px 18px;
   }
 
-  .info-title {
-    font-size: 1.2rem;
-  }
-
-  .info-card ul {
-    font-size: 0.9rem;
+  .denuncia-button-container {
+    justify-content: center; /* Centra el botón en pantallas pequeñas */
   }
 }
