--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,15 +1,17 @@
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  z-index: 1000; /* Asegúrate de que esté por encima del contenido */
+}
+
   
   .header-background {
     position: absolute;
