--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  z-index: 1000; /* Asegúrate de que esté por encima del contenido */
+  z-index: 1000; 
 }
 
   
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 120px;
+    height: 100px;
     background-image: url('../assets/images/pattern.png');
     background-repeat: repeat;
     background-position: top left;
@@ -30,7 +30,7 @@
     top: 0;
     left: 20px;
     z-index: 2;
-    height: 100px;
+    height: 80px;
     display: flex;
     align-items: center;
   }
@@ -42,10 +42,10 @@
   
   .header-navbar {
     position: relative;
-    top: 120px;
+    top: 100px;
     left: 0;
     width: 100%;
-    height: 30px; /* Altura predeterminada */
+    height: 30px; 
     background-color: #009887;
     z-index: 3;
     display: flex;
@@ -72,13 +72,17 @@
     color: white;
     font-size: 16px;
     font-weight: bold;
+    padding: 5px 10px; 
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease; 
   }
   
   .header-navbar nav ul li a:hover {
-    text-decoration: underline;
+    background-color: #00796b; 
+    color: white; 
   }
   
-  /* Media query para pantallas pequeñas */
+  
   @media (max-width: 768px) {
     .header {
       height: auto;
@@ -102,9 +106,9 @@
     .header-navbar {
       position: relative;
       top: 0;
-      height: 20px !important; /* Reducida de 30px a 20px con prioridad */
+      height: 20px !important; 
       background-color: #009887;
-      padding: 0 !important; /* Asegurar que no haya padding adicional */
+      padding: 0 !important; 
       display: flex;
       justify-content: flex-start;
       gap: 5px !important;
@@ -113,7 +117,7 @@
     .header-navbar nav ul {
       flex-direction: row;
       padding: 0 !important;
-      gap: 5px !important; /* Reducir el espacio entre enlaces */
+      gap: 5px !important; 
     }
   
     .header-navbar nav ul li {
@@ -123,7 +127,7 @@
   
     .header-navbar nav ul li a {
       font-size: 14px;
-      line-height: 20px !important; /* Alinear texto con la altura */
+      line-height: 20px !important; 
       text-align: center;
     }
   }
