--- a/src/assets/styles/Denuncia.css
+++ b/src/assets/styles/Denuncia.css
@@ -153,7 +153,7 @@ button {
 .info-card:nth-child(2) {
   background-color: #fdecea;
   border: 3px solid #d72d3d;
-  grid-column: 2 / 2; /* Columna 2 */
+  grid-column: 2h / 2; /* Columna 2 */
   grid-row: 1 / 2; /* Fila 2 */
 }
 
