--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,3 +1,11 @@
+
+@font-face {
+  font-family: 'NovecentoMediumm';
+  src: url('../Fonts/Novecento-Medium.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -126,6 +134,7 @@
     }
   
     .header-navbar nav ul li a {
+      font-family: 'NovecentoMedium';
       font-size: 14px;
       line-height: 20px !important; 
       text-align: center;
