--- a/src/assets/styles/Form.css
+++ b/src/assets/styles/Form.css
@@ -9,7 +9,7 @@
   border-radius: 15px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   position: relative;
-  left: 55%; 
+  margin-top: 20px; 
 }
 
 .formulario {
