--- a/src/assets/styles/ProgressBar.css
+++ b/src/assets/styles/ProgressBar.css
@@ -1,16 +1,14 @@
-/* Contenedor principal del ProgressBar */
 .progress-bar-container {
     width: 100%;
-    max-width: 700px; /* Más ancho para parecerse a la imagen */
+    max-width: 700px; 
     margin: 0 auto;
     text-align: center;
   }
   
-  /* Título */
   .progress-title {
     font-size: 1.5rem;
-    margin-bottom: 30px; /* Más espacio entre el título y la barra */
-    color: #b21f1f; /* Rojo */
+    margin-bottom: 30px; 
+    color: #b21f1f; 
   }
   
   /* Contenedor de pasos */
