--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -20,13 +20,17 @@
 }
 
 body {
-  padding-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
+  padding: 0; /* Sobreescribe el padding-top si ya no es necesario */
+  margin: 0;
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
   color: #333;
   line-height: 1.6;
 }
-
 button {
   font-family: inherit;
   border: none;
@@ -37,8 +41,10 @@ button {
 .app-container {
   width: 90%;
   max-width: 1200px;
-  margin: 0 auto;
   padding: 70px;
+  padding-top: 150px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .main-content {
@@ -127,17 +133,13 @@ button {
 @media (max-width: 768px) {
   .home-section {
     grid-template-columns: 1fr;
-    /* Cambia a una sola columna en pantallas pequeñas */
     grid-template-rows: auto auto auto;
-    /* Se adapta al contenido */
     padding: 20px;
   }
 
   .home-section-content {
     max-width: 100%;
-    /* Ocupa todo el ancho disponible */
     text-align: center;
-    /* Centra el texto */
   }
 
   .home-title {
@@ -155,6 +157,32 @@ button {
 
   .home-button-container {
     justify-content: center;
-    /* Centra el botón en pantallas pequeñas */
+  }
+}
+
+/* Nuevos estilos para pantallas pequeñas (máximo 480px) */
+@media (max-width: 480px) {
+  .app-container {
+    padding: 30px;
+  }
+
+  .home-title {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+  }
+
+  .home-description {
+    font-size: 0.9rem;
+    line-height: 1.4;
+  }
+
+  .home-button {
+    font-size: 0.8rem;
+    padding: 8px 14px;
+  }
+
+  .home-section {
+    padding: 15px;
+    border-radius: 6px;
   }
 }
