--- a/src/assets/styles/Topic.css
+++ b/src/assets/styles/Topic.css
@@ -4,6 +4,7 @@
   padding: 20px;
   min-height: calc(100vh - 100px);
   overflow: visible; 
+  padding-top: 100px;
 }
 .topic-page {
   overflow: visible; 
