--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -23,14 +23,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
-  padding: 0; /* Sobreescribe el padding-top si ya no es necesario */
+  min-height: 100vh;
+  /* Asegura que el contenedor ocupe toda la altura de la ventana */
+  padding: 0;
+  /* Sobreescribe el padding-top si ya no es necesario */
   margin: 0;
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
   color: #333;
   line-height: 1.6;
 }
+
 button {
   font-family: inherit;
   border: none;
@@ -130,50 +133,43 @@ button {
   transform: translateY(-2px);
 }
 
+
 @media (max-width: 768px) {
-  .home-section {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    padding: 20px;
-  }
-
-  .home-section-content {
-    max-width: 100%;
-    text-align: center;
-  }
-
-  .home-title {
-    font-size: 1.5rem;
-  }
-
-  .home-description {
-    font-size: 1rem;
-  }
-
-  .home-button {
-    font-size: 0.9rem;
-    padding: 10px 18px;
-  }
-
-  .home-button-container {
-    justify-content: center;
-  }
-}
-
-/* Nuevos estilos para pantallas pequeñas (máximo 480px) */
-@media (max-width: 480px) {
   .app-container {
-    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    position: relative;
+    width: 100%;
+    height: 100%; 
+    padding-top: 90px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .home-section {
+    padding: 15px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   .home-title {
     font-size: 1.2rem;
     margin-bottom: 15px;
+    text-align: center;
   }
 
   .home-description {
     font-size: 0.9rem;
     line-height: 1.4;
+    text-align: center;
   }
 
   .home-button {
@@ -181,8 +177,60 @@ button {
     padding: 8px 14px;
   }
 
+  .home-button-container {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+
+
+@media (max-width: 480px) {
+  .app-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    position: relative;
+    width: 100%;
+    height: 100%; 
+    padding-top: 90px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
   .home-section {
     padding: 15px;
     border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .home-title {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+
+  .home-description {
+    font-size: 0.9rem;
+    line-height: 1.4;
+    text-align: center;
+  }
+
+  .home-button {
+    font-size: 0.8rem;
+    padding: 8px 14px;
+  }
+
+  .home-button-container {
+    display: flex;
+    justify-content: center;
   }
 }
+
