--- a/src/assets/styles/Denuncia.css
+++ b/src/assets/styles/Denuncia.css
@@ -212,30 +212,36 @@ button {
   padding-left: 10px;
 }
 
+.info-card p,
+.info-card ul {
+  text-align: justify;
+  margin: 0;
+}
+
 
 /* Responsivo */
 @media (max-width: 768px) {
   .denuncia-section {
-    display: flex; /* Convierte en flexbox */
-    flex-direction: column; /* Apila los elementos verticalmente */
-    justify-content: center; /* Centra verticalmente */
-    align-items: center; /* Centra horizontalmente */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
   }
 
   .denuncia-section-content {
-    max-width: 100%; /* Ocupa todo el ancho disponible */
-    text-align: center; /* Centra el texto */
+    max-width: 100%;
+    text-align: center;
   }
 
   .denuncia-title {
     font-size: 1.5rem;
-    text-align: center; /* Centra el texto */
+    text-align: center;
   }
 
   .denuncia-description {
     font-size: 1rem;
-    text-align: center; /* Centra el texto */
+    text-align: center;
   }
 
   .denuncia-button {
@@ -244,20 +250,33 @@ button {
   }
 
   .denuncia-button-container {
-    display: flex; /* Asegura flexibilidad */
-    justify-content: center; /* Centra horizontalmente */
+    display: flex;
+    justify-content: center;
   }
 
   .info-section {
-    display: flex; /* Convierte en flexbox */
-    flex-direction: column; /* Cambia a diseño de columna */
-    align-items: center; /* Centra horizontalmente */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
   }
 
   .info-card {
     width: 100%;
-    margin-bottom: 15px; /* Espaciado entre tarjetas */
+    margin-bottom: 15px;
+    text-align: center;
+  }
+
+  .info-card p,
+  .info-card ul {
+    text-align: justify;
+    margin: 0;
+  }
+
+  .info-card ul {
+    list-style: disc;
+    margin-left: 20px;
+    padding-left: 10px;
   }
 
   .info-section::before {
@@ -322,6 +341,18 @@ button {
     text-align: center;
   }
 
+  .info-card p,
+  .info-card ul {
+    text-align: justify;
+    margin: 0;
+  }
+
+  .info-card ul {
+    list-style: disc;
+    margin-left: 20px;
+    padding-left: 10px;
+  }
+
   .info-section::before {
     display: none;
   }
@@ -333,6 +364,6 @@ button {
 
   .info-title span.highlight-yes,
   .info-title span.highlight-no {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 }
