--- a/src/assets/styles/Topic.css
+++ b/src/assets/styles/Topic.css
@@ -39,6 +39,7 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 20px;
+  justify-content: center; 
 }
 
 @media (max-width: 1200px) {
