--- a/src/assets/styles/Denuncia.css
+++ b/src/assets/styles/Denuncia.css
@@ -8,11 +8,13 @@
 }
 
 @font-face {
-  font-family: 'NovecentoWideBook';
-  src: url('../fonts/Novecento-WideBook.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Monteserrat';
+  src: url('../Fonts/Montserrat-Italic-VariableFont_wght.ttf') format('truetype');
+  font-weight: bold;
   font-style: normal;
 }
+
+
 
 @font-face {
   font-family: 'NovecentoMediumm';
@@ -111,7 +113,7 @@ button {
 }
 
 .denuncia-title {
-  font-family: 'NovecentoWideBold', sans-serif;
+  font-family: 'Monteserrat', sans-serif;
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 20px;
@@ -119,7 +121,6 @@ button {
 }
 
 .denuncia-description {
-  font-family: 'NovecentoWideBook', sans-serif;
   font-size: 1.2rem;
   margin-bottom: 30px;
   line-height: 1.5;
@@ -227,6 +228,7 @@ button {
     justify-content: center;
     align-items: center;
     padding: 20px;
+    ;
   }
 
   .denuncia-section-content {
@@ -292,9 +294,10 @@ button {
     align-items: center;
     margin: 0 auto;
     padding: 10px;
-    padding-top: 90px;
+    padding-top: 150px;
     max-width: 90%;
     box-sizing: border-box;
+    
   }
 
   .denuncia-section {
