--- a/src/assets/styles/Seguimiento.css
+++ b/src/assets/styles/Seguimiento.css
@@ -107,6 +107,7 @@
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
+  font-family: 'NovecentoMediumm', sans-serif;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -172,7 +173,7 @@
 
 @media (max-width: 480px) {
   .seguimiento-content {
-    padding: 10px;
+    padding: 50px;
   }
 
   .seguimiento-title {
@@ -183,6 +184,7 @@
   .seguimiento-button {
     padding: 8px 15px;
     font-size: 12px;
+    margin : 25px 25px;
   }
 
   .seguimiento-logos img {
