--- a/src/assets/styles/Card.css
+++ b/src/assets/styles/Card.css
@@ -13,6 +13,20 @@
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
+@font-face {
+  font-family: 'NovecentoWideBook';
+  src: url('../fonts/Novecento-WideBook.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NovecentoMediumm';
+  src: url('../Fonts/Novecento-Medium.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15); 
@@ -43,7 +57,8 @@
 }
 
 .card-title {
-  font-size: 14px; 
+  font-family: 'NovecentoMediumm';
+  font-size: 13px; 
   font-weight: bold;
   color: #444444; 
   text-align: center;
@@ -55,6 +70,7 @@
 }
 
 .card-description {
+  font-family: 'NovecentoWideBook';
   position: absolute;
   top: 0;
   left: 0;
