--- a/src/assets/styles/Form.css
+++ b/src/assets/styles/Form.css
@@ -11,6 +11,28 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   position: relative;
   margin-top: 20px; 
+  overflow: hidden !important; 
+}
+
+@font-face {
+  font-family: 'NovecentoWideBold';
+  src: url('../Fonts/Novecento-WideBold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NovecentoWideBook';
+  src: url('../fonts/Novecento-WideBook.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NovecentoMediumm';
+  src: url('../Fonts/Novecento-Medium.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
 
 .formulario {
@@ -42,6 +64,7 @@
   background-color: #f0f0f0; 
   color: #333; 
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); 
+  font-family: 'NovecentoWideBook';
 }
 
 textarea.form-control {
@@ -205,6 +228,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   margin-bottom: 5px;
   font-size: 14px;
   font-weight: bold;
+  font-family: 'NovecentoMediumm';
 }
 
 .form-pair {
@@ -283,3 +307,53 @@ option[disabled] {
   font-weight: bold;
   color: #555;
 }
+
+.custom-select__control {
+  background-color: #f0f0f0 !important; /* Ajuste del fondo */
+  border: none !important;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 5px !important;
+  height: 40px !important; /* Altura uniforme */
+  font-family: 'NovecentoWideBook';
+}
+
+.custom-select__control--is-invalid {
+  background-color: #f45b5b !important; /* Fondo rojo claro */
+  border: 2px solid #ff5c5c !important; /* Borde rojo */
+  box-shadow: none !important; /* Quitar sombra para un diseño más claro */
+  border-radius: 5px;
+  
+}
+
+.custom-select__placeholder {
+  color: #888 !important;
+  font-size: 14px !important;
+}
+
+.custom-select__single-value {
+  color: #333 !important;
+  font-size: 14px !important;
+}
+
+.custom-select__menu {
+  border-radius: 5px !important;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1) !important;
+}
+
+.custom-select__option {
+  font-size: 14px !important;
+  font-family: 'NovecentoWideBook';
+  color: #333 !important;
+  background-color: #fff !important;
+}
+
+.custom-select__option:hover {
+  background-color: #009887 !important;
+  color: #fff !important;
+}
+
+.custom-select__option:active {
+  background-color: #00796b !important;
+  color: #fff !important;
+}
+
